# ghs

./: .gitignore  Cargo.toml  README.md  plan.md
.github/workflows/: ci.yml  release.yml
repo/: ghs.cast
src/: api.rs  app.rs  buffers.rs  history.rs  main.rs  query.rs  result_widget.rs  results.rs
src/widgets/: mod.rs  search_results.rs  text_input.rs
