[package]
name = "ghs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.51", features = ["env", "derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
indoc = "2.0.7"
octocrab = "0.47.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
urlencoding = "2.1.3"

[dev-dependencies]
test-case = "3.3.1"
