[package]
name = "ghs"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A terminal UI for GitHub code search"
repository = "https://github.com/dzejkop/ghs"

[dependencies]
clap = { version = "4.5.51", features = ["env", "derive"] }
color-eyre = "0.6.5"
crossterm = "0.28.1"
dirs = "5.0"
indoc = "2.0.7"
open = "5.3.3"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
urlencoding = "2.1.3"
dotenvy = "0.15.7"

[dev-dependencies]
test-case = "3.3.1"
